# LLM

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
mnist/: LICENSE.txt  README.md  pyproject.toml  requirements.txt
mnist/src/mnist/: __about__.py  __init__.py  train.py
src/clustering/: models.py  requirements.txt  train.py  utils.py
src/content-based-filtering/: model.py  requirements.txt  train.py  utils.py
src/fraud-detection/: model.py  realistic_model.py  requirements.txt  simple_model.py  train.py  train_realistic.py  train_simple.py  utils.py
src/linear-regression/: instruction.txt  model.py  requirements.txt  stock_model.py  stock_train.py  train.py  utils.py
src/logistic-regression/: model.py  requirements.txt  train.py  utils.py
src/mnist/: __about__.py  __init__.py  model.py
src/sentiment_analysis/: interactive_test.py  models.py  requirements.txt  simple_test.py  test_sentiment.py  train.py  train_with_imdb.py
src/vanishing-gradient/: models.py  requirements.txt  train.py  utils.py
