[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mnist"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "mineme0110", email = "shailesh.patil@iohk.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mineme0110/mnist#readme"
Issues = "https://github.com/mineme0110/mnist/issues"
Source = "https://github.com/mineme0110/mnist"

[tool.hatch.version]
path = "src/mnist/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/mnist tests}"

[tool.coverage.run]
source_pkgs = ["mnist", "tests"]
branch = true
parallel = true
omit = [
  "src/mnist/__about__.py",
]

[tool.coverage.paths]
mnist = ["src/mnist", "*/mnist/src/mnist"]
tests = ["tests", "*/mnist/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
